--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-  "name": "my-app",
+  "name": "ez_admin",
   "version": "0.1.0",
   "description": "",
   "author": "ouyongdk@163.com",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.9.0",
+    "@ant-design/compatible": "^1.0.8",
     "@svgr/webpack": "4.3.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "antd": "^4.3.5",
+    "antd": "^4.16.1",
     "axios": "^0.19.2",
+    "camelcase": "^5.3.1",
+    "classnames": "2.3.1",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.4",
+    "identity-obj-proxy": "3.0.0",
+    "lodash": "^4.17.21",
+    "path-to-regexp": "^6.2.0",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "semver": "6.3.0",
+    "ts-pnp": "1.1.6"
+  },
+  "devDependencies": {
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
-    "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "mockjs": "^1.1.0",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^12.12.47",
+    "@types/path-to-regexp": "^1.7.0",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@babel/core": "7.9.0",
     "css-loader": "3.4.2",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -38,12 +53,26 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "express": "^4.17.1",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "2.3.5",
+    "typescript": "^3.7.5",
+    "url-loader": "2.3.0",
+    "webpack": "4.42.0",
+    "webpack-dev-server": "3.10.3",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "4.3.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "resolve": "1.15.0",
+    "resolve-url-loader": "3.1.1",
+    "sass-loader": "8.0.2",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
-    "http-proxy-middleware": "^1.0.4",
-    "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
@@ -55,26 +84,7 @@
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
-    "react": "^16.13.1",
-    "react-app-polyfill": "^1.0.6",
-    "react-dev-utils": "^10.2.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "semver": "6.3.0",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "2.3.5",
-    "ts-pnp": "1.1.6",
-    "typescript": "^3.7.5",
-    "url-loader": "2.3.0",
-    "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "postcss-safe-parser": "4.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -96,9 +106,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "mockjs": "^1.1.0"
   },
   "jest": {
     "roots": [
