--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@ant-design/compatible": "^1.0.8",
     "@svgr/webpack": "4.3.3",
     "antd": "^4.16.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "camelcase": "^5.3.1",
     "classnames": "2.3.1",
     "dotenv": "8.2.0",
@@ -28,12 +28,10 @@
     "ts-pnp": "1.1.6"
   },
   "devDependencies": {
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.2",
-    "mockjs": "^1.1.0",
+    "@babel/core": "7.9.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.170",
@@ -43,7 +41,14 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
-    "@babel/core": "7.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.6",
+    "babel-preset-react-app": "^9.1.2",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
@@ -53,23 +58,6 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "2.3.5",
-    "typescript": "^3.7.5",
-    "url-loader": "2.3.0",
-    "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
@@ -78,13 +66,25 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "mockjs": "^1.1.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1"
+    "postcss-safe-parser": "4.0.1",
+    "resolve": "1.15.0",
+    "resolve-url-loader": "3.1.1",
+    "sass-loader": "8.0.2",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "2.3.5",
+    "typescript": "^3.7.5",
+    "url-loader": "2.3.0",
+    "webpack": "4.42.0",
+    "webpack-dev-server": "3.10.3",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
